--- a/api/package.json
+++ b/api/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev" : "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "prisma": "^5.14.0"
   }
 }
