--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "nodemon": "^3.1.2",
     "prisma": "^5.14.0"
   }
