--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,6 @@
 DATABASE_URL="mongodb+srv://maitulya:maitulya@cluster0.r4p1ivl.mongodb.net/RentSpot?retryWrites=true&w=majority&appName=Cluster0"
+
+JWT_SECRET_KEY="maitulya123"
+
+
+PORT = 8800
